# pyusbip

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  pyusbip.py  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
pyusbip/: __init__.py  __main__.py  _macos.py  _version.py  control.py  events.py  protocol.py  registry.py  server.py
